--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -4,4 +4,4 @@ scipy
 pyyaml
 pyvjoy; sys_platform == "win32"
 evdev; sys_platform == "linux"
-uinput; sys_platform == "linux"
+python-uinput>=0.11.2; sys_platform == "linux"
