--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,7 +1,16 @@
-brainflow
-numpy
-scipy
-pyyaml
-pyvjoy; sys_platform == "win32"
-evdev; sys_platform == "linux"
+# BCI-Flystick Dependencies
+
+# Core EEG Processing
+brainflow>=5.0.0
+numpy>=1.21.0
+scipy>=1.7.0
+
+# Configuration
+pyyaml>=5.4
+
+# Windows Virtual Joystick
+pyvjoy>=1.0.1; sys_platform == "win32"
+
+# Linux Virtual Joystick
+evdev>=1.4.0; sys_platform == "linux"
 python-uinput>=0.11.2; sys_platform == "linux"
