--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -8,6 +8,7 @@ dead_band: 0.07
 gains:
   yaw: 1.8
   altitude: 1.6
-  speed: 1.4
+  throttle: 1.4
+  pitch: 1.2
 calibration_sec: 25
 udp_target: ["127.0.0.1", 5005]
